# lora-trainer

./: .gitignore  AGENTS.md  COLAB_DIAGNOSTIC_REPORT.md  COLAB_EXECUTION_GUIDE.py  COLAB_EXECUTION_SUMMARY.txt  COLAB_FINAL_REPORT.md  COLAB_QUICK_START.md  COLAB_WORKFLOW_GUIDE.md  README.md  TASK_COMPLETION_SUMMARY.md  colab_complete_workflow.py  colab_upload_helper.py  pyproject.toml  run_colab.py  run_colab_v2.py  run_colab_v3.py  run_colab_v4.py  run_colab_v5.py  run_colab_v6.py  upload_to_colab.py
.githooks/: pre-push
.github/: copilot-instructions.md
.github/prompts/: competitor_sop.prompt.md
.github/workflows/: ci.yml  ruff.yml
docs/: KANBAN.md  PRD.md  development.md  fern_dataset_guide.md
docs/competitive_analysis/: LyCORIS.md  flymyai-lora-trainer.md  index.md  lora-training-in-comfy.md  lora-training.md  lora.md  naifu.md  newbie-lora-trainer.md  one-trainer.md  reference_list.md  sd-lora-trainer.md  sd-scripts.md  sd-trainer.md  t2i-trainer.md  waifu-diffusion.md
docs/design/: ALGO_ADAPTER.md  MODEL_ADAPTER.md  TRAINER.md  architecture.md  cli_design.md  config_manager.md  data_loader.md  data_pipeline.md  error_handling.md  exporter.md  extraction_kohya_training_loop.md  extraction_lycoris_algo_adapter.md  file_structure_and_references.md  hyperparam_policy.md  lora.md  readme.md  (+6 more)
examples/: config_agent_1000.yaml  config_agent_smoke.yaml  config_basic.yaml  config_fern_1000.yaml  config_fern_clipscore.yaml  config_fern_test.yaml  config_quality.yaml
notebooks/: train_fern_clipscore.ipynb
scripts/: crop_fern_512.py
tests/: test_colab_agent.py  test_config_manager.py  test_data_loader.py  test_evaluator.py  test_lora.py  test_run_manager.py  test_sampler.py  test_trainer.py  test_training_validation.py
(+17 files in other folders)
